# event-radar

./: .env.example  .gitignore  README.md  event_radar.example.yaml  event_radar.yaml  event_radar_spec.md  pyproject.toml
.github/workflows/: daily-event-radar.yml
src/event_radar/: __init__.py  __main__.py  ai.py  cli.py  config.py  delivery.py  env.py  fetch.py  formatting.py  models.py  pipeline.py
tests/: test_ai.py  test_config.py  test_fetch.py  test_formatting_delivery_cli.py  test_pipeline.py
